  at the same address _and_ have the same type.  See the
  `typedAliases' resource for a discussion.

- When DDD creates a new dependent display, it copies the selection
  state from the originating display.  This way, you can easily unfold
  linked elements simply by clicking `Disp *' again and again.

- Anonymous unions are no longer prefixed by `='.

- Arc edges can now be printed.

- The default setting for printing is to print all displays.

- `Examine Memory' also works for Solaris DBX.


Source exploration
------------------

- Double-clicking on a function call (that is, an identifier followed
  by a `(' character) will lead you to the function definition.

- The GDB `Open Source' dialog has a filter.

- Dragging breakpoints works nicely with scrolling.


User Interface
--------------

- Insensitive items have a 3-D `emboss' look, making them more legible.

- `Flat' toolbar buttons keep their border after having been activated.

- Toolbar buttons appear in color when entered.  See the
  `activeButtonColorKey' resource for details.

- The `Insert' key toggles text insertion mode (requires Motif 2.0)

- The function keys F2-F9 are bound to frequently used commands:

	F2 Run
	F3 Run Again
	F4 Kill
	F5 Step		Shift+F5 Step Instruction
	F6 Next		Shift+F6 Next Instruction
	F7 Until
	F8 Finish
	F9 Continue	Shift+F9 Continue Without Signal

  The bindings from DDD 3.0 and earlier (Ctrl+E for Run, Ctrl+I for
  Step, etc.) are still available.


Debuggers, Languages, and Platforms
-----------------------------------

- Improved JDB class search.  Using JDB, `File->Open Class' no longer
  searches the class path for .java source files; instead, it searches
  for .class files and returns all classes with accessible .java
  sources.  Subdirectories are also searched.

- Further improved FORTRAN support.  When looking up FORTRAN functions
  and variables, DDD also tries to append two trailing underscores
  `__', as generated by g77 on several architectures.
